# SteamVR-Simple-Launcher

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  README_EN.md  build.rs
.github/workflows/: release.yml
src/: app.rs  main.rs  shortcut_manager.rs  steam_language.rs  steam_path.rs
