[package]
name = "steamvr_launcher"
version = "1.0.0"
edition = "2021"

[dependencies]
windows-reactor = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
windows-core = "0.58"
windows-registry = "0.6"
windows-result = "0.2"
dirs = "5"
lnks = "0.2.0"
rfd = "0.15"

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
winres = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
